<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outerConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/locationID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="location" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationID">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.Guideline
                android:id="@+id/onefourth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <android.support.constraint.Guideline
                android:id="@+id/onehalf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <android.support.constraint.Guideline
                android:id="@+id/threefourths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />

            <TextView
                android:id="@+id/officeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/threefourths"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/onefourth"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="officeID" />

            <TextView
                android:id="@+id/nameID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/officeID"
                tools:text="name" />

            <TextView
                android:id="@+id/partyID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameID"
                tools:text="party" />

            <ImageView
                android:id="@+id/imageID"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/image_of_official"
                android:onClick="openPhotoActivity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/partyID"
                app:srcCompat="@drawable/placeholder" />

            <TextView
                android:id="@+id/addressID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="viewStart"
                android:textColorLink="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.261"
                app:layout_constraintStart_toStartOf="@+id/onefourth"
                app:layout_constraintTop_toBottomOf="@+id/imageID"
                tools:text="address" />

            <TextView
                android:id="@+id/phoneID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:textAlignment="viewStart"
                android:textColorLink="@color/white"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.261"
                app:layout_constraintStart_toStartOf="@+id/onefourth"
                app:layout_constraintTop_toBottomOf="@+id/addressID"
                tools:text="phone" />

            <TextView
                android:id="@+id/emailID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:textAlignment="viewStart"
                android:textColorLink="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.261"
                app:layout_constraintStart_toStartOf="@+id/onefourth"
                app:layout_constraintTop_toBottomOf="@+id/phoneID"
                tools:text="email" />

            <TextView
                android:id="@+id/websiteID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="viewStart"
                android:textColorLink="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.261"
                app:layout_constraintStart_toStartOf="@+id/onefourth"
                app:layout_constraintTop_toBottomOf="@+id/emailID"
                tools:text="website" />

            <TextView
                android:id="@+id/addressLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toStartOf="@+id/onefourth"
                app:layout_constraintHorizontal_bias="0.275"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/addressID"
                tools:text="address" />

            <TextView
                android:id="@+id/phoneLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toStartOf="@+id/onefourth"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/phoneID"
                tools:text="phone" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toStartOf="@+id/onefourth"
                app:layout_constraintHorizontal_bias="0.543"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/emailID"
                tools:text="email" />

            <TextView
                android:id="@+id/websiteLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toStartOf="@+id/onefourth"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/websiteID"
                tools:text="website" />

            <ImageView
                android:id="@+id/youtubeButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/youtube"
                android:onClick="youtubeClicked"
                app:layout_constraintEnd_toStartOf="@+id/onefourth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/websiteID"
                app:srcCompat="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/googleplusButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/gplus"
                android:onClick="googleplusClicked"
                app:layout_constraintEnd_toStartOf="@+id/onehalf"
                app:layout_constraintStart_toStartOf="@+id/onefourth"
                app:layout_constraintTop_toBottomOf="@+id/websiteID"
                app:srcCompat="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/twitterButton"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/twitter"
                android:onClick="twitterClicked"
                app:layout_constraintEnd_toStartOf="@+id/threefourths"
                app:layout_constraintStart_toStartOf="@+id/onehalf"
                app:layout_constraintTop_toBottomOf="@+id/websiteID"
                app:srcCompat="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/facebookButton"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/facebook"
                android:onClick="facebookClicked"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/threefourths"
                app:layout_constraintTop_toBottomOf="@+id/websiteID"
                app:srcCompat="@drawable/ic_launcher_background" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>